<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/trackName"
        android:layout_width="116dp"
        android:layout_height="39dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:text="@string/trackname" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/albumName"
        android:layout_width="116dp"
        android:layout_height="65dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="70dp"
        android:text="@string/albumname" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="200dp"/>

    <TextView
        android:id="@+id/artistname"
        android:layout_width="142dp"
        android:layout_height="39dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="30dp"
        android:text="@string/artistname" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/ddmmyy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm_dd_yyyy"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="70dp"/>


</RelativeLayout>